--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
     "concurrently": "^8.0.1",
     "i": "^0.3.7",
     "json-server": "^0.17.3",
